tests/NormalTests/paczka2/big_fuzzy/86786426.err
Error in line 2: OIgUgIW A876 1,6
Error in line 3: WcJjIHMyJx A176 24,0
Error in line 33: WcJjIHMyJx A176 15,0
Error in line 28: A176 S14 62,9
Error in line 35: 1N2MI7Ry A176 27,6
Error in line 38: 10mrPY S825 15,8
Error in line 51: 10mrPY S14 75,0
Error in line 55: Cds S825 17,46
Error in line 52: 10mrPY A876 56,6
Error in line 54: Cds A176 247,8
Error in line 57: Cds A876 34,4
Error in line 67: 10mrPY S825 73,7
Error in line 65: 1N2MI7Ry S825 27,2
Error in line 79: A176 A876 2,3
Error in line 85: Cds S14 59,5
Error in line 87: Cds A176 36,1
Error in line 90: A176 A176 62,7
Error in line 94: OgUgW A876 18,1
Error in line 93: WcJjIHMyJx A176 20,8
Error in line 102: 10mrPY S825 89,2
Error in line 97: OIgUgIW A876 39,1
Error in line 117: 10mrPY A876 64,3
Error in line 122: 1N2MI7Ry A876 10,3
Error in line 129: 1N2MI7Ry S14 89,2
Error in line 136: 10mrPY S825 34,2
Error in line 134: OIgUgIW A176 54,7
Error in line 137: WcJjIHMyJx S14 79,2
Error in line 103: A176 S825 14,2
Error in line 157: WcJjIHMyJx S14 77,5
Error in line 168: Cds S14 62,5
Error in line 166: WcJjIHMyJx S825 13,7
Error in line 171: WcJjIHMyJx A176 42,1
Error in line 176: 10mrPY S825 16,8
Error in line 182: 1N2MI7Ry S825 73,6
Error in line 208: OIgUgIW A876 59,89
Error in line 211: Cds A876 36,4
Error in line 214: Cds S825 75,9
Error in line 224: WcJjIHMyJx Sv4 v8,3
Error in line 229: KJ3 S14 24,5
Error in line 236: KJ3 S825 49,8
Error in line 242: @N2MI7Ry S@4 7@,4
Error in line 243: OIgUgIW A176 -4,4
Error in line 240: Cds A876 75,2
Error in line 237: WcJjIHMyJx S825 201,9
